--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,8 @@
 name = "jiazhuangai2vs"
-compatibility_date = "2024-09-23" # 请确保这个日期与您 Cloudflare Pages UI 中的兼容日期一致或更新
+pages_build_output_dir = "./frontend/.vercel/output/static" # 相对于 wrangler.toml 的路径
+
+compatibility_date = "2024-09-23" # 您可以根据 Cloudflare 的建议更新此日期
 compatibility_flags = ["nodejs_compat"]
-pages_build_output_dir = "./frontend/.vercel/output/static" # 确保 Pages 读取此文件
+
+[build.environment]
+NODE_VERSION = "20.14.2"
