--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.808.0",
+    "@aws-sdk/s3-request-presigner": "^3.808.0",
     "@cloudflare/workers-types": "^4.20250505.0",
     "@hono/zod-validator": "^0.5.0",
     "hono": "^4.7.8",
+    "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/uuid": "^10.0.0",
     "wrangler": "^4.14.1"
   }
 }
