--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,11 @@
     "node": ">=18.18.0"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^2.12.0",
+    "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "jwt-decode": "^4.0.0",
     "next": "15.3.1",
     "react": "^19.0.0",
