--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -2,6 +2,10 @@ name = "jiazhuangai-backend" # Worker 名称
 main = "src/index.ts" # 入口文件 (稍后创建)
 compatibility_date = "2025-05-05" # 使用当前日期或根据需要调整
 
+# 确保Workers在全球都可访问
+[placement]
+mode = "smart" # 智能路由，自动选择最佳数据中心
+
 # [vars] 部分用于定义环境变量
 # 这些变量在本地开发 (wrangler dev) 时可用
 # 在生产环境中，您需要在 Cloudflare Dashboard 中设置这些变量
